Add links to about and blog

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Radiodan Blog
 type: home
 ---
 
+<a name="about"></a>
 <div> 
 <p>
 Radiodan is Open Source software that lets you build your own internet radio on a Raspberry 
@@ -32,6 +33,7 @@ instructions are here</a> (but do get in <a href="2014/01/08/about-us.html">touc
 </p>
 </div>
 
+<a name="blog"></a>
 <div>
   <h2>Blog Posts</h2>
   <ul class="posts">
