Add instructions for postcard uploads

--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@ title: Radiodan Blog
 type: home
 ---
 
+<h2>Send us your radio ideas</h2>
+We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then share it with us.
+
+<ol class="items">
+ <li>Take a photo of your postcard</li>
+ <li>
+    Either:
+    <ul class="items">
+      <li>
+        <a href="https://www.flickr.com/groups/2386878@N23/pool/add/">add to our Flickr pool or</a>
+      </li>
+      <li>
+        <a href="http://twitter.com/teamradiodan">tweet us your picture or</a>
+      </li>
+      <li>
+        <a href="mailto:postcards@radiodan.net">email us</a>
+      </li>
+    </ul>
+  </li>
+</ol>
+
+<p>We'll use your photo in accordance with the <a href="http://www.bbc.co.uk/terms/personal.shtml#5">BBC's terms</a>.</p>
+
+<h2>About Radiodan</h2>
 {% capture about %}{% include about-project.md %}{% endcapture %}
 {{ about | markdownify }}
 
