Add quick blog post about various pieces of documentation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ type: home
 ---
 
 <h2>Send us your radio ideas</h2>
-We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then share it with us.
+We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then you can share it with us, if you like - 
 
 <ol class="items">
  <li>Take a photo of your postcard</li>
