--- a/index.html
+++ b/index.html
@@ -4,38 +4,41 @@ title: Radiodan Blog
 type: home
 ---
 
-<h2>About Radiodan</h2>
-{% capture about %}{% include about-project.md %}{% endcapture %}
-{{ about | markdownify }}
+<div class="one-half column">
+  <h2>About Radiodan</h2>
+  {% capture about %}{% include about-project.md %}{% endcapture %}
+  {{ about | markdownify }}
 
-<h2>Want to build your own radio?</h2>
-If you'd like to build your own Radiodan-powered radio then get in touch with us <a href="mailto:radiodan@pixelblend.co.uk?subject=Instructions">via email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>. We're hard at work writing instructions and we'd love your help testing them. 
+  <h2>Want to build your own radio?</h2>
+  If you'd like to build your own Radiodan-powered radio then get in touch with us <a href="mailto:radiodan@pixelblend.co.uk?subject=Instructions">via email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>. We're hard at work writing instructions and we'd love your help testing them. 
 
-<h2>Send us your radio ideas</h2>
-We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then you can share it with us, if you like - 
+  <h2>Send us your radio ideas</h2>
+  We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then you can share it with us, if you like - 
 
-<ol class="items">
- <li>Take a photo of your postcard</li>
- <li>
-    Either:
-    <ul class="items">
-      <li>
-        <a href="https://www.flickr.com/groups/2386878@N23/pool/add/">add to our Flickr pool or</a>
-      </li>
-      <li>
-        <a href="http://twitter.com/teamradiodan">tweet us your picture or</a>
-      </li>
-      <li>
-        <a href="mailto:postcards@radiodan.net">email us</a>
-      </li>
-    </ul>
-  </li>
-</ol>
+  <ol class="items">
+   <li>Take a photo of your postcard</li>
+   <li>
+      Either:
+      <ul class="items">
+        <li>
+          <a href="https://www.flickr.com/groups/2386878@N23/pool/add/">add to our Flickr pool or</a>
+        </li>
+        <li>
+          <a href="http://twitter.com/teamradiodan">tweet us your picture or</a>
+        </li>
+        <li>
+          <a href="mailto:postcards@radiodan.net">email us</a>
+        </li>
+      </ul>
+    </li>
+  </ol>
 
-<p>We'll use your photo in accordance with the <a href="http://www.bbc.co.uk/terms/personal.shtml#5">BBC's terms</a>.</p>
+  <p>We'll use your photo in accordance with the <a href="http://www.bbc.co.uk/terms/personal.shtml#5">BBC's terms</a>.</p>
+</div>
 
-<a name="blog"></a>
-<div>
+<div class="one-half column">
+  <img class="u-max-full-width" src="/assets/mb-1-homepage.jpg" />
+  <a name="blog"></a>
   <h2>Blog Posts</h2>
   <ul class="posts">
     {% for post in site.posts %}
