Added Radiodan Neue references

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@ type: home
   {{ about | markdownify }}
 
   <h2>Want to build your own radio?</h2>
-  If you'd like to build your own Radiodan-powered radio then get in touch with us <a href="mailto:radiodan@pixelblend.co.uk?subject=Instructions">via email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>. We're hard at work writing instructions and we'd love your help testing them. 
+
+  If you'd like to build your own Radiodan-powered radio then consider 
+using <a href="https://github.com/andrewn/neue-radio">Radiodan Neue</a> 
+Andrew's new simplified version, which uses Chromium on a Raspberry Pi.
+
+You can get in touch with us <a 
+href="mailto:radiodan@pixelblend.co.uk?subject=Instructions">via 
+email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>.
 
   <h2>Send us your radio ideas</h2>
   We're collecting your radio ideas on our <a href="https://www.flickr.com/groups/2386878@N23">Flickr pool</a>. If you've picked up one of our Radiodan postcards and drawn your own radio then you can share it with us, if you like - 
