--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ type: home
 
   <h2>Want to build your own radio?</h2>
 
-  If you'd like to build your own Radiodan-powered radio then consider 
-using <a href="https://github.com/andrewn/neue-radio">Radiodan Neue</a> 
-Andrew's new simplified version, which uses Chromium on a Raspberry Pi.
+Start <a href="https://radio-docs.netlify.com/">here</a> for all relevant links.
 
+<br />
 You can get in touch with us <a 
 href="mailto:radiodan@pixelblend.co.uk?subject=Instructions">via 
 email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>.
