Fix flickr link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ email</a> or <a href="https://twitter.com/teamradiodan">on twitter</a>.
       Either:
       <ul class="items">
         <li>
-          <a href="https://www.flickr.com/groups/2386878@N23/pool/add/">add to our Flickr pool or</a>
+          <a href="https://www.flickr.com/groups/2386878@N23">add to our Flickr group or</a>
         </li>
         <li>
           <a href="http://twitter.com/teamradiodan">tweet us your picture or</a>
